modified:   src/posts/11.md

--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -192,14 +192,19 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ## Linh hoạt
 
-  TODO
+  Gắn liền nhãn với cửa sổ. Nhưng với twist:
+
+  - Trong tabs workspace, tab hiển thị thêm thông tin ở bên trái và bên phải của thanh tab trông giống như trong _phương pháp Tách biệt_.
+  - Trong busy workspace, thông tin bổ sung sẽ tiếp tục được hiển thị trên cùng một vị trí trên thanh thông tin.
+    - Thanh thông tin có thể tự động trở nên trong suốt giống như trong [Elementary OS](https://elementary.io).
+    - Nếu gaps lớn bằng hoặc hơn thanh thông tin, thanh thông tin có thể được ẩn vào vào trong gaps đấy luôn.
 {% else %}
   ## Dynamic
 
   Show window's title attach to the window itself but with a twist:
 
-  - In a tabs workspace, the tab show additional information on the left and right side of the tabs bar make the tabs workspace look like one in the _Detach method_.
-  - In a busy workspace, additional information will keep being display on the same position on a bar.
+  - In tabs workspace, the tab show additional information on the left and right side of the tabs bar make the tabs workspace look like one in the _Detach method_.
+  - In busy workspace, additional information will keep being display on the same position on a bar.
     - The bar can automatically be transparent like how [Elementary OS](https://elementary.io)'s bar work.
     - If the desktop have gaps equal or bigger than the bar, information bar can be blended into the gap-part.
 {% endif %}
@@ -211,29 +216,20 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ### Lợi ích
 
-  TODO
-
-  ### Hạn chế
+  - Nó giải quyết được vấn đề về thanh thông tin, workspaces và đồng hồ sẽ luôn luôn được hiển thị và vẫn để tabs workspace gọn như _phương pháp Tách biệt_.
+  - Ở busy workspace, "Nếu gaps lớn bằng hoặc hơn thanh thông tin, thanh thông tin có thể được ẩn vào vào trong gaps đấy luôn" sẽ đồng thời khiến busy workspace gọn như _phương pháp Phương pháp gắn liền_.
 {% else %}
   ### Pro
 
   - This solved the information bar problem, additional information (workspaces and clock) will always be visible and still make the tabs workspace compact like the _Detach method_.
-  - In a busy workspace, _"if the desktop have gaps equal or bigger than the bar, information bar can be blended into the gap-part"_ which make the busy workspace as compact as in the _Attach method_.
-
-  ### Con
+  - In a busy workspace, "if the desktop have gaps equal or bigger than the bar, information bar can be blended into the gap-part" which make the busy workspace as compact as in the _Attach method_.
 {% endif %}
 
-| Busy workspace                                                                                                     | Tabs workspace                                                                                                    |
-| ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------- |
-| ![hateBusy](https://user-images.githubusercontent.com/43980777/108809476-81267180-75db-11eb-93d1-cb540b6fab66.png) | ![hateTab](https://user-images.githubusercontent.com/43980777/108809478-81bf0800-75db-11eb-946a-6dd00a3b11fd.png) |
+<!--
+  | Busy workspace                                                                                                     | Tabs workspace                                                                                                    |
+  | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------- |
+  | ![hateBusy](https://user-images.githubusercontent.com/43980777/108809476-81267180-75db-11eb-93d1-cb540b6fab66.png) | ![hateTab](https://user-images.githubusercontent.com/43980777/108809478-81bf0800-75db-11eb-946a-6dd00a3b11fd.png) |
 
-{% if lang == 'vi' %}
-  TODO
-
-  ### Khắc phục
-
-  TODO
-{% else %}
   - The bigest issue of this method is about technical, how can you achieve this?
     - Maybe you can emulate this by disable title bar then show title on the information bar in a tabs workspace and reverse in a busy workspace, but this is too complex and can't guarantee consistency.
   - The title bar and information bar must be in the same direction to the window, if not (e.g: title bar attach to the top of the window but the information bar is on the bottom of the screen) the title will jump around when transition between busy workspace and tabs workspace. This will break the consistency of the desktop.
@@ -242,7 +238,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
   ### Fix
 
   - Just use that empty space on the information bar to display more stuffs (`CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...), then collapsed most of it to an arrow icon when switch to a tabs workspace.
-{% endif %}
+-->
 
 {% if lang == 'vi' %}
   ## Kết luận
