modified:   src/posts/11.md 	new file:   src/posts/12.md 	new file:   src/posts/13.md

--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -218,39 +218,49 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 
   - Nó giải quyết được vấn đề về thanh thông tin, workspaces và đồng hồ sẽ luôn luôn được hiển thị và vẫn để tabs workspace gọn như _phương pháp Tách biệt_.
   - Ở busy workspace, "Nếu gaps lớn bằng hoặc hơn thanh thông tin, thanh thông tin có thể được ẩn vào vào trong gaps đấy luôn" sẽ đồng thời khiến busy workspace gọn như _phương pháp Phương pháp gắn liền_.
+
+  ### Hạn chế
 {% else %}
   ### Pro
 
   - This solved the information bar problem, additional information (workspaces and clock) will always be visible and still make the tabs workspace compact like the _Detach method_.
   - In a busy workspace, "if the desktop have gaps equal or bigger than the bar, information bar can be blended into the gap-part" which make the busy workspace as compact as in the _Attach method_.
+
+  ### Con
 {% endif %}
 
-<!--
-  | Busy workspace                                                                                                     | Tabs workspace                                                                                                    |
-  | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------- |
-  | ![hateBusy](https://user-images.githubusercontent.com/43980777/108809476-81267180-75db-11eb-93d1-cb540b6fab66.png) | ![hateTab](https://user-images.githubusercontent.com/43980777/108809478-81bf0800-75db-11eb-946a-6dd00a3b11fd.png) |
+| Busy workspace                                                                                                     | Tabs workspace                                                                                                    |
+| ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------- |
+| ![hateBusy](https://user-images.githubusercontent.com/43980777/108809476-81267180-75db-11eb-93d1-cb540b6fab66.png) | ![hateTab](https://user-images.githubusercontent.com/43980777/108809478-81bf0800-75db-11eb-946a-6dd00a3b11fd.png) |
 
-  - The bigest issue of this method is about technical, how can you achieve this?
-    - Maybe you can emulate this by disable title bar then show title on the information bar in a tabs workspace and reverse in a busy workspace, but this is too complex and can't guarantee consistency.
+
+{% if lang == 'vi' %}
+  - Thanh nhãn và thanh thông tin phải nằm ở cùng hướng với cửa sổ, nếu không (vd: thanh nhãn gắn ở trên cửa sổ mà thanh thông tin lại nằm ở phía dưới màn hình) thì nhãn cửa sổ sẽ nhảy vị trí khi chuyển busy workspace thành tabs workspace và ngược lại, phá hỏng sự thống nhất.
+  - Nếu gaps nhỏ hơn thanh thông tin, thanh thông tin sẽ chiếm không gian ở busy workspace, và ngoài workspaces với đồng hồ ra, nó sẽ chẳng hiển thị gì cả... khiến không gian ở thanh thông tin đó bị lãng phí.
+
+  ### Fix
+
+  - hiển thị thêm thông tin vào chỗ trống trên thanh thông tin (`CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...), rồi thu gọn nó thành icon mũi tên khi chuyển sang tabs workspace.
+{% else %}
   - The title bar and information bar must be in the same direction to the window, if not (e.g: title bar attach to the top of the window but the information bar is on the bottom of the screen) the title will jump around when transition between busy workspace and tabs workspace. This will break the consistency of the desktop.
   - If the desktop doesn't have gaps equal or bigger than the bar, the bar will be render fully in a busy workspace, and other than workspaces and clock, it display nothing... This bar took space on the desktop and used it inefficiency.
 
   ### Fix
 
   - Just use that empty space on the information bar to display more stuffs (`CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...), then collapsed most of it to an arrow icon when switch to a tabs workspace.
--->
+{% endif %}
 
 {% if lang == 'vi' %}
   ## Kết luận
 
   <div class="overflow-x-auto whitespace-nowrap">
 
-  | Method           | Busy workspace             | Tabs workspace |
-  | ---------------- | -------------------------- | -------------- |
-  | **Truyền thống** | Chật chội                  | Chật chội      |
-  | **Tách biệt**    | Khó dùng                   | Tốt            |
-  | **Gắn liền**     | Tốt                        | Ỏn             |
-  | **Linh hoạt**    | Tốt (tốt nhất khi có gaps) | Tốt            |
+  | Method           | Busy workspace            | Tabs workspace |
+  | ---------------- | ------------------------- | -------------- |
+  | **Truyền thống** | Chật chội                 | Chật chội      |
+  | **Tách biệt**    | Khó dùng                  | Tốt            |
+  | **Gắn liền**     | Tốt                       | Ỏn             |
+  | **Linh hoạt**    | Tốt (nhất là khi có gaps) | Tốt            |
 
   </div>
 {% else %}
