modified:   src/posts/11.md 	modified:   src/posts/12.md 	modified:   src/posts/13.md

--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -238,7 +238,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
   - Thanh nhãn và thanh thông tin phải nằm ở cùng hướng với cửa sổ, nếu không (vd: thanh nhãn gắn ở trên cửa sổ mà thanh thông tin lại nằm ở phía dưới màn hình) thì nhãn cửa sổ sẽ nhảy vị trí khi chuyển busy workspace thành tabs workspace và ngược lại, phá hỏng sự thống nhất.
   - Nếu gaps nhỏ hơn thanh thông tin, thanh thông tin sẽ chiếm không gian ở busy workspace, và ngoài workspaces với đồng hồ ra, nó sẽ chẳng hiển thị gì cả... khiến không gian ở thanh thông tin đó bị lãng phí.
 
-  ### Fix
+  ### Khắc phục
 
   - hiển thị thêm thông tin vào chỗ trống trên thanh thông tin (`CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...), rồi thu gọn nó thành icon mũi tên khi chuyển sang tabs workspace.
 {% else %}
