--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -8,4 +8,65 @@ date: 2023-08-10
 image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 ---
 
-TODO
+
+https://github.com/NNBnh/dotfiles/wiki/which#-bar
+
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
+
+## 1. Normie
+
+DE
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
+
+## 2. Ricer
+
+Arch
+BSPWM
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
+
+## 3. Minimalist
+
+No tiling
+No bar
+Berry
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
+
+## 4. Extreme Minimalist
+
+NOWM
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
+
+## 5. {% if lang == 'vi' %}Lười{% else %}Lazy{% endif %}
+
+DE
+
+{% if lang == 'vi' %}
+  TODO
+{% else %}
+  TODO
+{% endif %}
