--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -1,10 +1,7 @@
 ---
 title:
-  en: Desktop environment or Window manager only
-  vi: Desktop environment hay chỉ Window manager
-description:
-  en: Or even [!WM]
-  vi: Hay thậm chí là [!WM]
+  en: My perfect distro
+  vi: Distro lý tưởng
 tags:
   - os_rice
 date: 2023-08-10
@@ -13,8 +10,14 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
 TODO
 
-https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
+## Base
+
+## DE
+
 https://github.com/NNBnh/dotfiles/wiki/which#%EF%B8%8F-desktop-environment
 
-https://github.com/NNBnh/dotfiles/wiki/which#-windows-manager
-https://github.com/NNBnh/dotfiles/wiki/which#-bar
+## Other
+
+## Distro
+
+https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
