modified:   src/posts/12.md 	modified:   src/posts/13.md 	modified:   src/posts/7.md 	modified:   src/posts/9.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -8,50 +8,81 @@ date: 2023-08-10
 image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 ---
 
+🚧 Page under construction 🚧
 
-https://github.com/NNBnh/dotfiles/wiki/which#-bar
-
+[![Berry Rice](https://i.redd.it/eee4rwj3ssa81.png)](https://www.reddit.com/r/unixporn/comments/s0cccz/berry_ayudark_my_super_rice)
 
 {% if lang == 'vi' %}
-  TODO
+  Khi đang viết [Image viewer/media player tối giản](../9/) về năm giai đoạn rice image viewer, mình nhận ra năm giai đoạn đấy không chỉ có ở riêng việc rice image viewer, nó là của cả việc rice nói chung. Thế nên mình viết bài blog này để đi sâu vào năm giai đoạn rice tối giản.
 {% else %}
   TODO
 {% endif %}
 
 ## 1. Normie
 
-DE
+[![KDE Rice](https://i.imgur.com/NTHZScu.webp)](https://i.imgur.com/NTHZScu.webp)
 
 {% if lang == 'vi' %}
-  TODO
+  Những bé này mới cài Linux, cụ thể là Ubuntu hoặc Ubuntu-based với DE phổ biến như Gnome hoặc KDE. Bé cài một số extensions, theme, icons rồi cảm thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ cả config thêm cái gì trong máy nữa đâu.
 {% else %}
   TODO
 {% endif %}
 
 ## 2. Ricer
 
-Arch
-BSPWM
+[![BSPWM Rice](https://user-images.githubusercontent.com/43980777/104730274-50495600-576c-11eb-9520-890cb45815d9.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v1.0.0)
 
 {% if lang == 'vi' %}
-  TODO
+  Sau khi cài Linux các thứ xong, bé newbie đấy chắc cũng phải xem kha kha video về Linux trên Youtube, vì thế mà feed của bé hiện kha khá vid của các Linux Youtuber, bé nhấn vào xem rồi chợt nghe thấy ba chữ "I use Arch" (bốn nếu tính cả "BTW"). Bé backup tất cả mọi thứ và distro-hop sang Arch hoặc một Arch-base distro. Không lâu sau đấy bé khám phá ra [r/unixporn](https://www.reddit.com/r/unixporn). Mắt bé sáng lên, bé vội cài [BSPWM](https://github.com/baskerville/bspwm) + [Polybar](https://polybar.github.io) hoặc [Hyprland](https://hyprland.org) + [Waybar](https://github.com/Alexays/Waybar) và dành 2-3 tuần để rice nó.
+
+  Dùng tiling WM là tâm huyết đi theo keyboard workflow, mà keyboard workflow trên Linux thì không thể thiếu terminal.
+
+  > <span class="font-mono">GUI != Sành điệu<br>
+  > TTY == Hackerman</span>
+
+  Họ bắt đầu học cách dùng shell, thay shell chính sang bất cứ thứ gì khác ngoài Bash, độ prompt với [Starship](https://starship.rs), cài [Exa và một số công cụ CLI bằng Rust](https://github.com/sts10/rust-command-line-utilities#unix-to-rust-replacements-or-near-replacements). Cũng không ngạc nhiên gì nếu thời điểm này họ đã dành cả tháng để học và config [NeoVim](https://neovim.io).
 {% else %}
   TODO
 {% endif %}
 
 ## 3. Minimalist
 
-No tiling
-No bar
-Berry
+[![Cool Discord Rice](https://i.imgur.com/Sb9iZcz.webp)](https://discord.com/channels/635612648934735892/1033210791320625243/1033339746463789096)
+[![HerbstLuftWM Rice](https://user-images.githubusercontent.com/43980777/172338839-482602d7-d57b-4152-a368-2333cf4c0d79.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v3.3.0)
 
 {% if lang == 'vi' %}
-  TODO
+  ### Tiling WM là bloat
+
+  Mình từng độ tiling WM rất chăm cho đến khi đọc [post này](http://xahlee.info/linux/why_tiling_window_manager_sucks.html),
+
+  [Berry](https://berrywm.org)
 {% else %}
+  ### Tiling WM is bloat
+
+  I used to use an advanced tiling WM but after I read [this post](http://xahlee.info/linux/why_tiling_window_manager_sucks.html). When I first reading the post, I hate it, I think it is stupid, he just using the wrong way... But then I realize that my workflow rarely need tiling windows in a complex way to begin with:
+
+  - When I'm using GUI app with mouse, I always full screen the apps.
+  - When using the terminal or text editor, I just want to look at the focus window and see no value of looking at 3-4 terminal at the same time.
+  - Tiling 3-4 windows on the screen make everything cramped, the only advantage of this is to easily interact things between windows with a mouse which contradict with my keyboard focus workflow.
+  - The most complex tiling that I ever done is tiling the text editor and the document side to side, and even then I rarely rarely do so.
+{% endif %}
+
+{% if lang == 'vi' %}
+  ### Bar cũng bloat
+
+  TODO
+
+  [Lemonbar](https://github.com/LemonBoy/bar)
+  [Terminal](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface)
+{% else %}
+  ### Bar is also bloat
+
   TODO
 {% endif %}
 
 ## 4. Extreme Minimalist
+
+[![TTY rice w/ Zellij](https://user-images.githubusercontent.com/43980777/218121026-2d2ddb94-5105-4df8-a6a9-8ab632b69ce3.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v3.5.0)
 
 NOWM
 
