--- a/src/posts/7.md
+++ b/src/posts/7.md
@@ -10,11 +10,11 @@ image: https://images.unsplash.com/photo-1586006349222-4f422913db20
 ---
 
 {% if lang == 'vi' %}
-  Vào khoảng tháng 2, sau khi mình post [cái rice v3.5.0](https://github.com/NNBnh/dotfiles/releases/tag/v3.5.0) xong mình hứa là sẽ hướng dẫn mọi người cách dùng Ruby như một cái Shell. Ban đầu chỉ định là một bài viết nhỏ xong nở ra thành hẳn một trang web luôn! Xong cộng với thi thố ở trường và việc này việc kia nữa nên mãi đến bây giờ mình mới quay lại viết blog... Vậy nên xin lỗi và cảm ơn mọi người vì đã chờ đợi theo dõi blog của mình, mình sẽ cố gắng chăm chỉ viết blog hơn!
+  Vào khoảng tháng 2, sau khi mình post [cái rice v3.5.0](https://codeberg.org/NNB/dotfiles/releases/tag/v3.5.0) xong mình hứa là sẽ hướng dẫn mọi người cách dùng Ruby như một cái Shell. Ban đầu chỉ định là một bài viết nhỏ xong nở ra thành hẳn một trang web luôn! Xong cộng với thi thố ở trường và việc này việc kia nữa nên mãi đến bây giờ mình mới quay lại viết blog... Vậy nên xin lỗi và cảm ơn mọi người vì đã chờ đợi theo dõi blog của mình, mình sẽ cố gắng chăm chỉ viết blog hơn!
 
   Quay trở lại Ruby. Như đã đề cập, cái trang web mà mình tạo ra để hướng dẫn mọi người cách dùng Ruby trong Shell là [Ruby on Shell](https://nnb.codeberg.page/ruby-on-shell), nó rất hoàn thiện rồi và mọi người có thể vào đọc và nghiên cứu luôn. Bài blog này sẽ tập trung vào cách mình tìm ra sức mạnh của Ruby và quá trình mà mình tạo ra Ruby on Shell.
 {% else %}
-  Around February, after I posted [rice v3.5.0](https://github.com/NNBnh/dotfiles/releases/tag/v3.5.0), I promised to make a blog to explain how I use Ruby as a shell. Initially I want to explain it on an article, then it expanded into a website! Then a mountain of college work and internship job drop into my schedule... After all of that, I finally have time and energy to blogging again. So sorry and thank you everyone for waiting to follow my blog, I will try blogging more frequently!
+  Around February, after I posted [rice v3.5.0](https://codeberg.org/NNB/dotfiles/releases/tag/v3.5.0), I promised to make a blog to explain how I use Ruby as a shell. Initially I want to explain it on an article, then it expanded into a website! Then a mountain of college work and internship job drop into my schedule... After all of that, I finally have time and energy to blogging again. So sorry and thank you everyone for waiting to follow my blog, I will try blogging more frequently!
 
   Back to Ruby. As mentioned, the website that I created is [Ruby on Shell](https://nnb.codeberg.page/ruby-on-shell) and you can read it right now. This blog post will focus on how I discovered the power of Ruby and the process by which I created Ruby on Shell.
 {% endif %}
