--- a/src/posts/9.md
+++ b/src/posts/9.md
@@ -50,14 +50,16 @@ image: https://images.unsplash.com/photo-1543940610-e7e6c111ea10
   You can drag and drop media files into your web browser and it will play it. Realizing this, you quickly uninstall MPV and follow the path of suffering, path of extreme minimalism. There are a few formats it doesn't accept but it still be an acceptable solution... Or not, Using the browser can only view images in a very basic way, its experience is quite annoying. "Have I gone too far?", "Is this too minimalistic?" you thought.
 {% endif %}
 
-## 5. {% if lang == 'vi' %}Lười{% else %}Lazy{% endif %}
-
 {% if lang == 'vi' %}
+  ## 5. Lười
+
   Sau một thời gian rice Linux theo con đường tối giản, họ bắt đầu cảm thấy mệt mỏi và có một cái nhìn khác về sự tối giản. Họ nhận ra rằng dùng DE rất tối giản về mặt thời gian và công sức. DE nói thật cũng không bloat lắm, nó có một số tính năng mà không phải lúc nào mình cũng dùng nhưng có nó thì cũng rất tiện trong những trường hợp cơ nhỡ. Và nếu mình không cài hay config gì mà chỉ sử dụng những thứ mặc định trong máy thì dotfiles của mình sẽ gọn hơn rất nhiều!
 
   Và như thế họ quyết định quay lại cài DE và sử dụng image viewer mặc định đi kèm theo DE. Vi nó có sắn rồi thì dùng luôn đúng không. Tội gì lại không!
 {% else %}
-  After rice Linux - minimalist style for a while, they start to get tired and have a different view of minimalism. They realize that using DE is very minimal in terms of time and effort. To be honest, DE is not that bloated, It has some features that although we don't always use, but having it is still very convenient in some situation. And if I don't install or configure anything but just use the default stuff from the DE, the dotfiles will be a lot more minimal!
+  ## 5. Lazy
+
+  After rice Linux - minimalist style for a while, they start to get tired and have a different view of minimalism. They realize that using DE is very minimal in terms of time and effort. To be honest, DE is not that bloat, It has some features that although we don't always use, but having it is still very convenient in some situation. And if I don't install or configure anything but just use the default stuff from the DE, the dotfiles will be a lot more minimal!
 
   And so they decided to go back to installing DE and use the default image viewer that comes with the DE. Since it already there, why not use it, right?
 {% endif %}
