--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -8,16 +8,20 @@ date: 2023-08-10
 image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ---
 
-TODO
+🚧 Page under construction 🚧
 
-## Base
+<!--
+  TODO
 
-## DE
+  ## Base
 
-https://github.com/NNBnh/dotfiles/wiki/which#%EF%B8%8F-desktop-environment
+  ## DE
 
-## Other
+  https://github.com/NNBnh/dotfiles/wiki/which#%EF%B8%8F-desktop-environment
 
-## Distro
+  ## Other
 
-https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
+  ## Distro
+
+  https://github.com/NNBnh/dotfiles/wiki/which#-operating-system
+-->
