modified:   src/posts/12.md 	modified:   src/posts/13.md 	modified:   src/posts/9.md

--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -28,7 +28,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
   TODO
 {% endif %}
 
-## 2. Ricer
+## 2. Beginner
 
 [![BSPWM Rice](https://user-images.githubusercontent.com/43980777/104730274-50495600-576c-11eb-9520-890cb45815d9.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v1.0.0)
 
@@ -40,7 +40,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
   > <span class="font-mono">GUI != Sành điệu<br>
   > TTY == Hackerman</span>
 
-  Họ bắt đầu học cách dùng shell, thay shell chính sang bất cứ thứ gì khác ngoài Bash, độ prompt với [Starship](https://starship.rs), cài [Exa và một số công cụ CLI bằng Rust](https://github.com/sts10/rust-command-line-utilities#unix-to-rust-replacements-or-near-replacements). Cũng không ngạc nhiên gì nếu thời điểm này họ đã dành cả tháng để học và config [NeoVim](https://neovim.io).
+  Họ bắt đầu học cách dùng shell, thay thế hầu hết các app GUI sang app TUI/CLI, thay shell chính sang bất cứ thứ gì khác ngoài Bash, độ prompt với [Starship](https://starship.rs), cài [Exa và một số công cụ CLI bằng Rust](https://github.com/sts10/rust-command-line-utilities#unix-to-rust-replacements-or-near-replacements). Cũng không ngạc nhiên gì nếu thời điểm này họ đã dành cả tháng để học và config [NeoVim](https://neovim.io).
 {% else %}
   TODO
 {% endif %}
@@ -53,27 +53,35 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   ### Tiling WM là bloat
 
-  Mình từng độ tiling WM rất chăm cho đến khi đọc [post này](http://xahlee.info/linux/why_tiling_window_manager_sucks.html),
+  Mình từng độ tiling WM rất chăm cho đến khi đọc [post này](http://xahlee.info/linux/why_tiling_window_manager_sucks.html). Ban đầu mình đọc thấy bài viết khá chối... Xong nhận ra là mình thực ra chẳng cần tính năng tiling phức tạp của mấy WM làm gì:
 
-  [Berry](https://berrywm.org)
+  - Khi mình dùng GUI app bằng chuột, mình luôn để app toàn màn hình.
+  - Khi dùng terminal hoặc text editor, mình chỉ muốn tập trung vào cửa sổ mà mình đang gõ và rất hiếm khi cần để nhiều cửa sổ hiện cùng một lúc.
+  - Tile 3-4 cửa sổ trên màn hình trông rất là chật chội, cửa sổ nào cũng không đủ to để mình có thể dùng thoải mái. Lợi ích duy nhất của việc tile 3-4 cửa sổ trên màn hình là để dễ dàng di chuột qua lại các cửa sổ để tương tác... nhưng như thế lại đối nghịch với keyboard workflow.
+
+  Đến lúc dọn nhà sang floating WM rồi. Có điều là nhưng WM cực kỳ tối giản như [SOWM](https://github.com/dylanaraps/sowm) và [Berry](https://berrywm.org) khá là buggy (ít ra là ở thời điểm này) nên đành ngậm ngùi quay lại tiling WM, mình chỉ cần set rule cho mọi cửa sổ tự dộng float là được.
 {% else %}
   ### Tiling WM is bloat
 
   I used to use an advanced tiling WM but after I read [this post](http://xahlee.info/linux/why_tiling_window_manager_sucks.html). When I first reading the post, I hate it, I think it is stupid, he just using the wrong way... But then I realize that my workflow rarely need tiling windows in a complex way to begin with:
 
-  - When I'm using GUI app with mouse, I always full screen the apps.
+  - When I'm using GUI app with mouse, I always maximize the apps.
   - When using the terminal or text editor, I just want to look at the focus window and see no value of looking at 3-4 terminal at the same time.
-  - Tiling 3-4 windows on the screen make everything cramped, the only advantage of this is to easily interact things between windows with a mouse which contradict with my keyboard focus workflow.
-  - The most complex tiling that I ever done is tiling the text editor and the document side to side, and even then I rarely rarely do so.
+  - Tiling 3-4 windows on the screen make everything cramped, the only advantage of this is to easily interact things between windows with a mouse which contradict with the keyboard workflow.
+
+  TODO
 {% endif %}
 
 {% if lang == 'vi' %}
   ### Bar cũng bloat
 
-  TODO
+  _\*Khịt khịt\*_ mình ngửi thấy mùi bloat, và mùi đó phát ra từ thanh bar. Chuyển sang bar nhẹ hơn như [Lemonbar](https://github.com/LemonBoy/bar) hay thậm chí là [biến terminal thành bar](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface) không chắc đã khiến mùi bloat hết thum thủm.
 
-  [Lemonbar](https://github.com/LemonBoy/bar)
-  [Terminal](https://sw.kovidgoyal.net/kitty/kittens/panel/#command-line-interface)
+  Vấn đề là nó chiếm đi không gian quý báu trên màn hình của mình, một khoảng không gian rộng 16 đến 24 pixel trải dài từ đầu này sang đầu kia bị màn hình bị _lãng phí_ vào việc hiển thị: đồng hồ, workspaces, và một số thông tin vớ vẩn mà thật sự mình chả cần check nó liên tục. Không thể chấp nhận được, vứt bar thôi!
+
+  Ta có thể chỉ hiện danh sách workspaces và đòng hồ khi chuyển workspace hoặc dùng phím tắt [bằng thông báo](https://gist.github.com/NNBnh/5f6e601a6a82a6ed43b1959698758141?permalink_comment_id=3735888#gistcomment-3735888).
+
+  Hoặc đi theo con đường hardcore và bỏ nó hoàn toàn luôn, xem giờ thì xem trên đồng hồ đeo tay, đồng hồ treo tường hoặc dùng lệnh `date` XD. Việc chia workspaces thật sự cũng chả cần thiết lắm khi mình ít tile cửa sổ và toàn để app toàn màn hình, bỏ workspaces luôn đi cho gọn, đỡ phải config, đỡ phải hiển thị.
 {% else %}
   ### Bar is also bloat
 
@@ -84,17 +92,21 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
 [![TTY rice w/ Zellij](https://user-images.githubusercontent.com/43980777/218121026-2d2ddb94-5105-4df8-a6a9-8ab632b69ce3.png)](https://codeberg.org/NNB/dotfiles/releases/tag/v3.5.0)
 
-NOWM
-
 {% if lang == 'vi' %}
-  TODO
+  WM... là Bloat. Mình cũng có thể gỡ WM và login manager luôn. Dùng full TTY của Linux Kernel và gõ lệnh để mở app... [NOWM](https://github.com/K4zoku/nowm) hoặc [[wms]](https://git.disroot.org/root_informatica/wms) sẽ giúp trải nghiệm của bạn đỡ thê thảm hơn khi không có WM.
+
+  Nhớ mấy cái TUI/CLI app bà bạn cài ở giai đoạn beginner không? Bạn nhận ra bạn không cần đến 80% trong số đó, bạn ưa nhưng công cụ có sẵn trong chuẩn POSIX để script của bạn di động hơn. Bạn thậm chỉ còn bỏ luôn file manager!
+
+  Prompt của bạn giờ chỉ là "`$`", `pwd` là ngọn đuốc duy nhất thắp sáng cho bạn trong file system.
+
+  Rice giờ không chỉ tối giản nữa, nó biến thành cái hố đen rồi. Hiếm kẻ đủ can đảm để đi xa hơn ngưỡng này, nhưng một số huyền thoại tiếp tục đi tiếp, đặc điểm duy nhất để nhận dạng ra họ là họ làm [Linux From Scratch](https://www.linuxfromscratch.org/lfs) và biết [Framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) là gì.
 {% else %}
   TODO
 {% endif %}
 
-## 5. {% if lang == 'vi' %}Lười{% else %}Lazy{% endif %}
+## 5. Maximalist
 
-DE
+[![Gnome Rice](https://raw.githubusercontent.com/Aylur/dotfiles/gnome43/assets/rose.png)](https://github.com/Aylur/dotfiles/tree/gnome43)
 
 {% if lang == 'vi' %}
   TODO
