--- a/src/posts/9.md
+++ b/src/posts/9.md
@@ -22,7 +22,7 @@ image: https://images.unsplash.com/photo-1543940610-e7e6c111ea10
   These newbies have just installed Linux and use the default image viewer that comes with the DE. Since it already there, why not use it, right?
 {% endif %}
 
-## 2. Ricer
+## 2. Beginner
 
 {% if lang == 'vi' %}
   Sau khi cài Arch Linux (hoặc Manjaro và giả vờ là mình dùng Arch thuần) và setup WM xong. Các Ricer quyết định cài [SXIV](https://github.com/muennich/sxiv) sau khi nghe rằng nó tốt hơn [FEH](https://feh.finalrewind.org) từ một video Youtube. Nhưng ngay sau đó họ nhận ra để config SXIV thì họ phải tải mã nguồn, chỉnh code và tự compile nó. Kẻ tiếp tực dùng nó và đi theo [chủ nghĩa Suckless](https://suckless.org/philosophy), người nhận thấy sự Suck**** bên trong nó và tiếp tục cuộc hành trình đi tìm một cái image viewer nhanh, nhỏ, nhẹ và dễ config hơn. Cuối cùng họ dừng chân khi tìm thấy [IMV](https://sr.ht/~exec64/imv), nó như SXIV nhưng dễ config hơn, hoàn hảo!
